--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 <div class="jumbotron text-center">
   <img src="images/welcome.png" alt="welcome" style="height:auto;max-width:100%; object-fit: contain" class = "center" ><br>
-  <a href="https://www.google.com">
+  <a href="https://itunes.apple.com/us/app/fite-time/id953924075?ls=1&mt=8">
     <image src = "images/apple_download_badge.png" alt="download app" width = "213" height = "71.4" class = "center" >
   </a>
 </div>
@@ -244,7 +244,6 @@
 <!-- Container (features Section) -->
 <div id="features" class="container-fluid bg-lightBlack text-center">
   <h1>FEATURES</h1>
-  <h3>What we offer</h3>
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
