add terms and privacy policy

--- a/index.html
+++ b/index.html
@@ -343,6 +343,12 @@
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
   <p>Copyright 2015-2018 Fite Time Inc.</p>
+  <div class="collapse navbar-collapse" id="myNavbar">
+    <ul class="nav navbar-nav navbar-center">
+      <li><a href="/privacy-policy">Privacy</a></li>
+      <li><a href="/terms-of-service">Terms of Service</a></li>
+    </ul>
+  </div>
 </footer>
 
 <script>
