--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
       /*color: #d59b3a !important;*/
       background-color: #2f2f2f !important;
   }
+
   .navbar-default .navbar-toggle {
       border-color: transparent;
       color: #fff !important;
@@ -226,167 +227,15 @@
       </button>
       <a class="navbar-brand" href="#fiteTimeTop">Fite Time</a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#features">FEATURES</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-      </ul>
-    </div>
   </div>
 </nav>
 
-<div class="jumbotron text-center">
-  <img src="images/welcome.png" alt="welcome" style="height:auto;max-width:100%; object-fit: contain" class = "center" ><br>
-  <a href="https://itunes.apple.com/us/app/fite-time/id953924075?ls=1&mt=8">
-    <image src = "images/apple_download_badge.png" alt="download app" width = "213" height = "71.4" class = "center" >
-  </a>
-</div>
-
 <!-- Container (About Section) -->
 <div id="about" class="container-fluid text-center">
-      <h2>About Fite Time</h2><br>
-      <h4>Fite Time is a MMA app that provides schedules and results for popular MMA events,
-        such as UFC and Bellator. Most events are updated live, keeping you informed on the progress
-        of the fight card. Fite Time also provides useful information such as broadcast channel
-        and time(US only) for various portions of the event.</h4><br>
+      <h4>I want to thank everyone for using the app for the past 4 years. As of April 2019, Fite Time is closed and the app will no longer be updated.
+        
+      </h4><br>
 </div>
-
-<!-- Container (features Section) -->
-<div id="features" class="container-fluid bg-lightBlack text-center">
-  <h1>FEATURES</h1>
-  <br>
-  <div class="row slideanim">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-calendar logo-small"></span>
-      <h3>SCHEDULES</h3>
-      <p1>Upcoming events, with broadcast channel and time.</p1>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-ok logo-small"></span>
-      <h3>RESULTS</h3>
-      <p1>Recent results, updated live for popular events.</p1>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-bell logo-small"></span>
-      <h3>REMINDER</h3>
-      <p1>Set reminder for upcoming events.</p1>
-    </div>
-  </div>
-  <br><br>
-  <div class="row slideanim">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-thumbs-up logo-small"></span>
-      <h3>VOTE</h3>
-      <p1>Vote on whom you think would win a fight, and see how others voted.</p1>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-list logo-small"></span>
-      <h3>RECORDS</h3>
-      <p1>W-L-D and tale of the tape for fights.</p1>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-globe logo-small"></span>
-      <h3>NEWS READER</h3>
-      <p1>Stay updated with built-in RSS reader.</p1>
-    </div>
-  </div>
-</div>
-
-<!-- Container (screenshots Section) -->
-<div id="screenshots" class="container-fluid text-center">
-  <h2>Screenshots</h2>
-  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-      <img src = "images/carousel1.png" alt = "Sample Image 1" class = "center">
-      </div>
-      <div class="item">
-        <img src = "images/carousel2.png" alt = "Sample Image 1" class = "center">
-      </div>
-      <div class="item">
-        <img src = "images/carousel3.png" alt = "Sample Image 1" class = "center">
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
-
-<!-- Container (Contact Section) -->
-<div id="contact" class="container-fluid bg-lightBlack text-center">
-  <h1>CONTACT</h1>
-      <p1>Contact us and we'll get back to you within 24 hours.</p1><br>
-      <p1><span class="glyphicon glyphicon-envelope"></span>  support@FiteTimeApp.com</p1><br>
-      <p1><span class="glyphicon glyphicon-map-marker"></span>  Fremont, CA</p1>
-</div>
-
-
-<footer class="container-fluid text-center">
-  <a href="#fiteTimeTop" title="To Top">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a>
-  <p>Copyright 2015-2018 Fite Time Inc.</p>
-  <div class="collapse navbar-collapse" id="myNavbar">
-    <ul class="nav navbar-nav navbar-center">
-      <li><a href="/privacy-policy">Privacy</a></li>
-      <li><a href="/terms-of-service">Terms of Service</a></li>
-    </ul>
-  </div>
-</footer>
-
-<script>
-$(document).ready(function(){
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#fiteTimeTop']").on('click', function(event) {
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-      // Prevent default anchor click behavior
-      event.preventDefault();
-
-      // Store hash
-      var hash = this.hash;
-
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 900, function(){
-
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
-
-  $(window).scroll(function() {
-    $(".slideanim").each(function(){
-      var pos = $(this).offset().top;
-
-      var winTop = $(window).scrollTop();
-        if (pos < winTop + 600) {
-          $(this).addClass("slide");
-        }
-    });
-  });
-})
-</script>
 
 </body>
 </html>
